# Immobilia

./: .gitignore  cahier_des_charges_immobilia.tex  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 9874811a8696_initial_schema.py
backend/app/: main.py
backend/app/agents/base/: client.py  orchestrator.py  prompts.py
backend/app/agents/buyer/: __init__.py
backend/app/agents/buyer/legal/: README.md  __init__.py  agent.py  clause_recommendation.py  compliance_checker.py  contract_generator.py  document_analyzer.py  document_checklist.py  prompts.py  rag_agent.py  state.py  workflow.py
backend/app/agents/investor/: __init__.py  dealing_portfolio.py  prompts.py
backend/app/agents/prompts/investor/: strategy_system.md
backend/app/agents/prompts/seller/: house_neighborhood_data_collector.md  listing_intake.md  verification.md
backend/app/agents/seller/: __init__.py  ai_detection.py  data_collector.py  listing_assistant.py  quality.py  verification.py
backend/app/api/: chat.py  properties.py
backend/app/core/: config.py  db.py  deps.py  minio.py  qdrant.py  redis.py  security.py
backend/app/models/: __init__.py  chat.py  coloc.py  dvf_property.py  enums.py  identity.py  investor.py  legal.py  messaging.py  pg_types.py  properties.py  transactions.py
backend/app/routers/: __init__.py  auth.py  health.py  investor.py  legal.py  seller.py  verification.py
backend/app/schemas/: auth.py  chat.py  dvf_property.py  investor.py  legal.py  listing.py  neighborhood.py  verification.py
backend/app/services/: auth_service.py  bmv.py  chat_service.py  comparison.py  dealing_portfolio.py  enrichment.py  enrichment_sources.py  geo_utils.py  investment_alerts.py  investor_ports.py  legal_conversation_state.py  legal_document_extraction_service.py  legal_llm_service.py  legal_rag_service.py  legal_service.py  legal_storage_service.py  listing_service.py  mistral_client.py  property_resolver.py  verification.py
backend/data/legal_rag/: README.md
backend/data/legal_rag/processed/: README.md
backend/data/legal_rag/raw/: README.md
backend/scripts/: demo_neighborhood.html  demo_server.py  ingest_legal_rag.py  seed_dvf.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_health.py  test_listing.py
backend/tests/agents/investor/: test_dealing_portfolio.py
backend/tests/routers/: test_investor.py
backend/tests/services/: test_bmv.py  test_investment_alerts.py
frontend/: .dockerignore  .gitignore  README.md  (+4 more)
(+97 files in other folders)
