[project]
name = "immobilia-backend"
version = "0.1.0"
description = "Immobil'IA backend — FastAPI + PostgreSQL + Qdrant + Redis + MinIO"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    # ---- Web ----
    "fastapi>=0.118",
    "uvicorn[standard]>=0.37",
    "pydantic>=2.11",
    "pydantic-settings>=2.11",
    "python-multipart>=0.0.20",
    # ---- PostgreSQL (relational core, docs §2) ----
    "sqlalchemy[asyncio]>=2.0.43",
    "asyncpg>=0.30",
    "alembic>=1.16",
    # ---- Qdrant (vector collections, docs §3) ----
    "qdrant-client>=1.15",
    # ---- Redis (sessions, cache, pub/sub, docs §4) ----
    "redis[hiredis]>=6.4",
    # ---- MinIO (media buckets, docs §5) ----
    "minio>=7.2",
    # ---- Auth (users.password_hash + session:{token}) ----
    "python-jose[cryptography]>=3.5",
    "passlib[bcrypt]>=1.7.4",
    # ---- LLM provider ----
    "openai>=2.0",
    "mistralai>=1.9",
    # ---- Image processing (seller verification agent) ----
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "numpy>=2.5.1",
    # ---- Agent orchestration (legal agent) ----
    "langgraph>=0.6",
    # ---- Document processing (legal agent) ----
    "pymupdf>=1.26",
    "python-docx>=1.2",
    "pytesseract>=0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "mypy>=1.18",
    "pytest>=8.4",
    "pytest-asyncio>=1.2",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"
# Alembic autogenerates verbose migrations (long inline column defs); don't lint them.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI markers are meant to be used as call-expression defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Query", "fastapi.Form"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

# Untyped third-party libs — no bundled stubs.
[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "minio.*",
    "mistralai",
    "mistralai.*",
    "langgraph.*",
    "fitz",
    "pytesseract",
]
ignore_missing_imports = true

# Alembic's generated env.py / migration scripts don't type-check under strict.
[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
